--- a/theColorGame.html
+++ b/theColorGame.html
@@ -4,11 +4,22 @@
         <meta charset="utf-8">
         <title>The Color Game</title>
         <link rel="stylesheet" href="style.css">
-        <script src="script.js">
 
-        </script>
     </head>
     <body>
+        <h1>The Great <span id="colorDispalay">RGB</span> Color Game<br>
 
+        <div class="container">
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+        </div>
+
+
+        <script src="script.js">
+        </script>
     </body>
 </html>
