--- a/theColorGame.html
+++ b/theColorGame.html
@@ -7,7 +7,11 @@
 
     </head>
     <body>
-        <h1>The Great <span id="colorDispalay">RGB</span> Color Game<br>
+        <h1>The Great <span id="colorDisplay">RGB </span> Color Game </h1>
+
+        <div>
+            <span id="message"> </span>
+        </div>
 
         <div class="container">
             <div class="square"></div>
