--- a/theColorGame.html
+++ b/theColorGame.html
@@ -9,7 +9,8 @@
     <body>
         <h1>The Great <span id="colorDisplay">RGB </span> Color Game </h1>
 
-        <div>
+        <div id="stripe">
+            <button type="button" name="New Colors" id="reset">New Colors</button>
             <span id="message"> </span>
         </div>
 
