--- a/theColorGame.html
+++ b/theColorGame.html
@@ -7,11 +7,15 @@
 
     </head>
     <body>
-        <h1>The Great <span id="colorDisplay">RGB </span> Color Game </h1>
-
+        <h1>The Great</br>
+          <span id="colorDisplay">RGB </span>
+        </br>
+          Color Game </h1>
         <div id="stripe">
             <button type="button" name="New Colors" id="reset">New Colors</button>
             <span id="message"> </span>
+            <button id="easyBtn">Easy</button>
+            <button id="hardBtn" class="selected">Hard</button>
         </div>
 
         <div class="container">
